2008-08-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* examples/behaviour.pl: Small fixes.

	* xs/ClutterBackend.xs: Bind the font options accessors of
	the Clutter::Backend class.

	* xs/ClutterContainer.xs: Documentation fixes.

2008-08-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* tools/mk-html-docs.sh: Add a simple script using
	mpod2html to convert the pod files to HTML files. Still
	not hooked up to anything, so it needs to be run
	manually.

2008-08-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter.typemap:
	* clutterperl.h:
	* xs/ClutterCogl.xs: Start wrapping the COGL API for
	textures. It is stil very experimental, and should only
	be used for testing at this moment.

2008-08-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.PL: Update the WriteMakefile() parameters so that
	the META.yml that MakeMaker generates is finally useful. Remove
	the rpms magic from the postamble.

======== Clutter 0.801 =======================================================
2008-07-22  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterModel.xs:
	* xs/ClutterModelIter.xs: Finish the wrappers for implementing
	a ClutterModel and a ClutterModelIter in pure Perl; the
	ClutterModel::resort implementation is still missing.

2008-07-22  Emmanuele Bassi  <ebassi@openedhand.com>

	Miscellaneous fixes for the Debian packaging.

	* xs/ClutterContainer.xs: Use the right parameter for the
	FOREACH code reference generation.

	* xs/ClutterEntry.xs: Remove the deprecated handle_key_event()
	wrapper.

	* xs/ClutterEvent.xs: Remove an unused function.

	* xs/ClutterStageManager.xs: Include clutter-stage-manager.h,
	since Clutter 0.8.0 shipped with this header missing from the
	clutter.h collective header.

2008-07-22  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterGstAudio.xs: Bind the get_playbin() method.

	* xs/ClutterGstVideoSink.xs:
	* xs_files_gst: Add ClutterGstVideoSink bindings.
